conclusion archi hiérarchique + partie mémoire associative

--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1257,3 +1257,33 @@
   booktitle={CIS},
   year={2005}
 }
+
+@article{lahat2015,
+  TITLE = {{Multimodal Data Fusion: An Overview of Methods, Challenges and Prospects}},
+  AUTHOR = {Lahat, Dana and Adali, T{\"u}lay and Jutten, Christian},
+  JOURNAL = {{Proceedings of the IEEE}},
+  PUBLISHER = {{Institute of Electrical and Electronics Engineers}},
+  SERIES = {Multimodal Data Fusion},
+  VOLUME = {103},
+  NUMBER = {9},
+  PAGES = {1449-1477},
+  YEAR = {2015},
+  MONTH = Aug
+}
+
+@article{McGurk1976HearingLA,
+  title={Hearing lips and seeing voices},
+  author={Harry McGurk and John MacDonald},
+  journal={Nature},
+  year={1976},
+  volume={264},
+  pages={746-748}
+}
+@article{Smith2005TheDO,
+  title={The Development of Embodied Cognition: Six Lessons from Babies},
+  author={Linda B. Smith and Michael Gasser},
+  journal={Artificial Life},
+  year={2005},
+  volume={11},
+  pages={13-29}
+}
