--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1240,7 +1240,7 @@
 }
 
 
-@incollection{johnsson_spatial_2012,
+@incollection{henriques_spatial_2012,
 	title = {Spatial {Clustering} {Using} {Hierarchical} {SOM}},
 	language = {en},
 	urldate = {2022-10-04},
@@ -1286,4 +1286,31 @@
   year={2005},
   volume={11},
   pages={13-29}
+}
+
+
+@inproceedings{jayaratne_bio-inspired_2018,
+	title = {Bio-{Inspired} {Multisensory} {Fusion} for {Autonomous} {Robots}},
+	booktitle = {{IECON} 2018 - 44th {Annual} {Conference} of the {IEEE} {Industrial} {Electronics} {Society}},
+	author = {Jayaratne, Madhura and Alahakoon, Damminda and De Silva, Daswin and Yu, Xinghuo},
+	month = oct,
+	year = {2018},
+	note = {ISSN: 2577-1647},
+	keywords = {Clustering algorithms, Neurons, Computer architecture, Brain modeling, self-organizing maps, audio-visual clustering, Biological system modeling, Heuristic algorithms, multimodal sensory fusion, Robot sensing systems, scalable computing, unsupervised machine learning},
+	pages = {3090--3095},
+}
+
+
+@article{luttrell_hierarchical_1989,
+	title = {Hierarchical vector quantisation},
+	journal = {IEE Proceedings I Communications, Speech and Vision},
+	author = {Luttrell, S.P.},
+	year = {1989}
+}
+
+@inproceedings{Kohonen1989SelfOrganizationAA,
+  title={Self-Organization and Associative Memory, Third Edition},
+  author={Teuvo Kohonen},
+  booktitle={Springer Series in Information Sciences},
+  year={1989}
 }
