--- a/main.tex
+++ b/main.tex
@@ -35,7 +35,8 @@
 \usepackage{mathtools}
 \usepackage{subfiles}
 
-\addbibresource{\subfix{Biblio/biblio.bib}}
+%\addbibresource{\subfix{./Biblio/biblio.bib}}
+%\addbibresource{./Biblio/biblio.bib}
 \input{Notations.tex}
 %compile only a chapter
 \SetAlCapSkip{1em}
