--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -912,13 +912,6 @@
   pages      = {441--445},
 }
 
-@article{LampinenClusteringPO,
-  author     = {Lampinen, J. and Oja, E.},
-  title      = {Clustering properties of hierarchical self-organizing maps},
-  journal    = {Journal of Mathematical Imaging and Vision},
-  year       = 1992,
-}
-
 @article{complex_adaptative_systemes,
   author     = {Holland, John H.},
   title      = {Complex Adaptive Systems},
@@ -958,14 +951,6 @@
   year       = 1992,
   volume     = 2,
   pages      = {196--214},
-}
-
-@article{lampinen_clustering_1992,
-  author     = {Lampinen, Jouko and Oja, Erkki},
-  title      = {Clustering {Properties} of {Hierarchical} {{Self}-{Organizing}} {Maps}},
-  journal    = {Journal of Mathematical Imaging and Vision},
-  year       = 1992,
-  volume     = 2,
 }
 
 @incollection{KOHONEN19911357,
@@ -1313,4 +1298,41 @@
   author={Teuvo Kohonen},
   booktitle={Springer Series in Information Sciences},
   year={1989}
+}
+
+%---------------------------------------------------
+% - evidences bio pour activation entre zones 
+% - evidences bio pour le coté décentralisé
+
+@article{Kiefer2008TheSO,
+  title={The Sound of Concepts: Four Markers for a Link between Auditory and Conceptual Brain Systems},
+  author={Markus Kiefer and Eun-Jin Sim and B{\"a}rbel Herrnberger and J. o Grothe and Klaus Hoenig},
+  journal={The Journal of Neuroscience},
+  year={2008},
+  volume={28},
+  pages={12224 - 12230}
+}
+
+@article{Gonzlez2006ReadingCA,
+  title={Reading cinnamon activates olfactory brain regions},
+  author={Julio Gonz{\'a}lez and Alfonso Barr{\'o}s-Loscertales and Friedemann Pulverm{\"u}ller and Vanessa Meseguer and Ana Sanju{\'a}n and Vicente Belloch and C{\'e}sar {\'A}vila},
+  journal={NeuroImage},
+  year={2006},
+  volume={32},
+  pages={906-912}
+}
+
+@article{Sathian2002FeelingWT,
+  title={Feeling with the mind's eye: contribution of visual cortex to tactile perception},
+  author={Krish Sathian and Andro Zangaladze},
+  journal={Behavioural Brain Research},
+  year={2002},
+  volume={135},
+  pages={127-132}
+}
+
+@inproceedings{Calvert2004TheHO,
+  title={The Handbook of Multisensory Processing},
+  author={Gemma A. Calvert and Charles Spence and Barry E. Stein},
+  year={2004}
 }
