--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1336,3 +1336,71 @@
   author={Gemma A. Calvert and Charles Spence and Barry E. Stein},
   year={2004}
 }
+
+@article{Calvert2004MultisensoryIM,
+  title={Multisensory integration: methodological approaches and emerging principles in the human brain},
+  author={Gemma A. Calvert and Thomas Thesen},
+  journal={Journal of Physiology-Paris},
+  year={2004},
+  volume={98},
+  pages={191-205}
+}
+
+@article{Cappe2005HeteromodalCS,
+  title={Heteromodal connections supporting multisensory integration at low levels of cortical processing in the monkey},
+  author={C{\'e}line Cappe and Pascal Barone},
+  journal={European Journal of Neuroscience},
+  year={2005},
+  volume={22}
+}
+
+@article{Cappe2009MultisensoryAP,
+  title={Multisensory anatomical pathways},
+  author={Catharine Cappe and Eric M. Rouiller and Pascal Barone},
+  journal={Hearing Research},
+  year={2009},
+  volume={258},
+  pages={28-36}
+}
+
+@article{Falchier2002AnatomicalEO,
+  title={Anatomical Evidence of Multimodal Integration in Primate Striate Cortex},
+  author={Arnaud Y. Falchier and Simon Clavagnier and Pascal Barone and Henry Kennedy},
+  journal={The Journal of Neuroscience},
+  year={2002},
+  volume={22},
+  pages={5749 - 5759}
+}
+
+@article{Smiley2009MultisensoryCO,
+  title={Multisensory connections of monkey auditory cerebral cortex},
+  author={John F. Smiley and Arnaud Y. Falchier},
+  journal={Hearing Research},
+  year={2009},
+  volume={258},
+  pages={37-46}
+}
+
+@article{Foxe2005TheCF,
+  title={The case for feedforward multisensory convergence during early cortical processing},
+  author={John J. Foxe and Charles E. Schroeder},
+  journal={NeuroReport},
+  year={2005},
+  volume={16},
+  pages={419-423}
+}
+@article{Schroeder2005MultisensoryCT,
+  title={Multisensory contributions to low-level, ‘unisensory’ processing},
+  author={Charles E. Schroeder and John J. Foxe},
+  journal={Current Opinion in Neurobiology},
+  year={2005},
+  volume={15},
+  pages={454-458}
+}
+
+
+@inproceedings{Burnod1989AnAN,
+  title={An adaptive neural network - the cerebral cortex},
+  author={Yves Burnod},
+  year={1989}
+}
