--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,8 @@
 \usepackage{amsfonts}
 \usepackage{arydshln}
 \usepackage{booktabs}
-
+%\usepackage{tablefootnote}
+\usepackage{threeparttable}
 %Fancy headers
 \usepackage{fancyhdr}
 \pagestyle{fancy}
