ajout de qq lignes dans l'intro, V1

--- a/02-Architectures/source.tex
+++ b/02-Architectures/source.tex
@@ -14,15 +14,15 @@
 \minitoc
 
 Les cartes auto-organisatrices et notamment le modèle de Kohonen sont largement utilisées en tant qu'algorithme d'apprentissage non supervisé appliqué à des tâches de réduction de dimension, de visualisation de données ou de classification.
-Cependant, peu de travaux ont exploré l'idée de les assembler en architecture comportant des rétroactions, formant ainsi un nouveau système d'apprentissage.
-La deuxième approche motivant la création d'un tel système se place au niveau de l'apprentissage développemental.
+Cependant, peu de travaux ont exploré leur aspect topologique et la simplicité de leurs règles de calcul pour les assembler en architectures modulaires, formant un système dynamique et générant d'autres comportements que ceux d'apprentissage automatique décrits ci-dessus.
+Une motivation de création d'une telle architecture se place par exemple au niveau de l'apprentissage développemental.
 Une telle motivation est ainsi formulée par Kohonen en 1995~:
 \begin{quote}
 Un objectif à long terme de l'auto-organisation est de créer des systèmes autonomes dont les éléments se contrôlent mutuellement et apprennent les uns des autres. De tels éléments de contrôle peuvent être implémentés par des SOMs spécifiques; le problème principal est alors l'interface, en particulier la mise à l'échelle automatique des signaux d'interconnexion entre les modules et la collecte de signaux pertinents comme interface entre les modules. Nous laisserons cette idée aux recherches futures.
 \cite{Kohonen1995SelfOrganizingM}
 \end{quote}
-
-Nous étudierons dans cette thèse un modèle de création d'architectures de cartes auto-organisatrices ou SOM (\emph{Self-Organizing Maps}) modulaires décentralisées.
+Bien que de nombreux travaux en apprentissage automatique aient fait avancer le domaine de l'apprentissage développemental depuis ces 30 dernières années, peu de travaux ont exploré la création d'architectures autonomes de cartes auto-organisatrices. La simplicité des règles de mise à jour de cet algorithmes leur confère pourtant un intérêt computationnel digne de de pas être oublié.
+Nous étudierons dans cette thèse un modèle de création d'architectures modulaires décentralisées de cartes auto-organisatrices.
 Le but de cette thèse est ainsi d'une part, de proposer un modèle de carte qui puisse être utilisée en tant que module et de définir l'interface entre modules et d'autre part d'en extraire des comportements de calcul en émergeant. 
 Avant toute chose, nous pouvons chercher des éléments de réponse à ces deux questions en étudiant les travaux traitant des architectures de cartes de Kohonen ou plus généralement de réseaux d'apprentissage utilisant des règles d'auto-organisation dans leur évolution. Cela nous permettra de privilégier un type d'interface au regard des travaux existants et d'émettre des hypothèses quant aux comportements que nous pouvons attendre de l'architecture que nous proposerons.
 
