--- a/02-Architectures/source.tex
+++ b/02-Architectures/source.tex
@@ -127,7 +127,7 @@ Les SOM en deux dimensions sont les plus communément utilisées dans la littér
 
 
 
-\section{Le cortex cérébral, une architecture modulaire}
+\section{Inspiration biologique des architectures de cartes}
 
 \subsection{Inspiration biologique des cartes de Kohonen}
 Le développement des cartes auto-organisatrices par Kohonen est initialement inspiré par les cartes topologiques observées dans les aires du cortex cérebral. 
